fix align and margin for multiple fields and buttons in rtl

--- a/frappe/public/css/desk-rtl.css
+++ b/frappe/public/css/desk-rtl.css
@@ -395,3 +395,25 @@ label {
   right: unset;
   left: 10px;
 }
+.form-page .form-control {
+  text-align: right !important;
+}
+.grid-add-multiple-rows.btn.btn-xs.btn-default {
+  margin-left: 4px !important;
+  margin-right: 0px !important;
+}
+.col-sm-6.text-right {
+  text-align: left !important;
+}
+.grid-download.btn.btn-xs.btn-default {
+  margin-right: 10px !important;
+  margin-left: 0px !important;
+}
+.grid-upload.btn.btn-xs.btn-default {
+  margin-right: 10px !important;
+  margin-left: 0px !important;
+}
+.form-inner-toolbar {
+  text-align: left !important;
+}
+
